[tool.poetry]
name = "shelchemy"
version = "0.220726.1"
description = "Shelve-like dict using sqlachemy as backend, and lazy scheduler for resuming tasks"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "shelchemy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
SQLAlchemy = "^1.4.39"
temporenc = "^0.1.0"
lz4 = "^4.0.2"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^21.7b0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
#pypiserver = "^1.4.2"
#passlib = "^1.7.4"
#numpy = "^1.21.2"
pandas = "1.4.0"
ipython = "^8.0.1"
click = "8.0.4"
lazydf = "^0.220725.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

