[tool.poetry]
name = "shelchemy"
version = "2.230727.3"
description = "Shelve-like dict using sqlalchemy as a backend, and lazy scheduler for resuming tasks"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "shelchemy", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<4.0"
SQLAlchemy = "^1.4.39,<2.0"
temporenc = "^0.1.0"
# Optional dependencies.
lz4 = { version = "^4.0.2", optional = true }
safeserializer = { version = "^0.230202.1", optional = true }

[tool.poetry.extras]    #[tool.poetry.group.extras.dependencies]
full = ["lz4", "safeserializer"]

[tool.poetry.group.dev.dependencies]
autoreadme = "^0.2102.20"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
pdoc3 = "^0.10.0"
pylint = "^2.7.4"
#pypiserver = "^1.4.2"
#passlib = "^1.7.4"
#numpy = "^1.21.2"
pandas = "^1.4.3"
ipython = "^8.0.1"
click = "8.0.4"
lz4 = "^4.0.2"
safeserializer = "^0.230202.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
